--- a/utils/llama-stack-distribution/tuw-ai/run.yaml
+++ b/utils/llama-stack-distribution/tuw-ai/run.yaml
@@ -178,9 +178,9 @@ registered_resources:
 server:
   port: 8321
 vector_stores:
-  default_provider_id: faiss
+  default_provider_id: ${env.VECTOR_STORE_DEFAULT_PROVIDER:=faiss}
   default_embedding_model:
-    provider_id: sentence-transformers
-    model_id: nomic-ai/nomic-embed-text-v1.5
+    provider_id: ${env.VECTOR_STORE_EMBEDDING_PROVIDER:=sentence-transformers}
+    model_id: ${env.VECTOR_STORE_EMBEDDING_MODEL:=nomic-ai/nomic-embed-text-v1.5}
 safety:
   default_shield_id: llama-guard
