--- a/charts/llama-stack/values.yaml
+++ b/charts/llama-stack/values.yaml
@@ -142,183 +142,186 @@ startupProbe:
   periodSeconds: 10
   failureThreshold: 30
 
-# Llama Stack run configuration
-# This is the complete run.yaml configuration that will be mounted as a ConfigMap
-runConfig:
-  version: 2
-  image_name: tuw-ai
-  apis:
-    - agents
-    - batches
-    - files
-    - inference
-    - safety
-    - tool_runtime
-    - vector_io
-  providers:
-    inference:
-      - provider_id: ${env.VLLM_URL:+vllm}
-        provider_type: remote::vllm
-        config:
-          url: ${env.VLLM_URL:=}
-          max_tokens: ${env.VLLM_MAX_TOKENS:=4096}
-          api_token: ${env.VLLM_API_TOKEN:=fake}
-          tls_verify: ${env.VLLM_TLS_VERIFY:=true}
-          allowed_models: []
-      - provider_id: openai
-        provider_type: remote::openai
-        config:
-          api_key: ${env.OPENAI_API_KEY:=}
-          base_url: ${env.OPENAI_BASE_URL:=https://api.openai.com/v1}
-    vector_io:
-      - provider_id: faiss
-        provider_type: inline::faiss
-        config:
-          persistence:
-            namespace: vector_io::faiss
-            backend: kv_default
-      - provider_id: sqlite-vec
-        provider_type: inline::sqlite-vec
-        config:
-          db_path: ${env.SQLITE_STORE_DIR:=~/.llama/distributions/starter}/sqlite_vec.db
-          persistence:
-            namespace: vector_io::sqlite_vec
-            backend: kv_default
-      - provider_id: ${env.MILVUS_URL:+milvus}
-        provider_type: inline::milvus
-        config:
-          db_path: ${env.MILVUS_DB_PATH:=~/.llama/distributions/starter}/milvus.db
-          persistence:
-            namespace: vector_io::milvus
-            backend: kv_default
-      - provider_id: ${env.CHROMADB_URL:+chromadb}
-        provider_type: remote::chromadb
-        config:
-          url: ${env.CHROMADB_URL:=}
-          persistence:
-            namespace: vector_io::chroma_remote
-            backend: kv_default
-      - provider_id: ${env.PGVECTOR_DB:+pgvector}
-        provider_type: remote::pgvector
-        config:
-          host: ${env.PGVECTOR_HOST:=localhost}
-          port: ${env.PGVECTOR_PORT:=5432}
-          db: ${env.PGVECTOR_DB:=}
-          user: ${env.PGVECTOR_USER:=}
-          password: ${env.PGVECTOR_PASSWORD:=}
-          persistence:
-            namespace: vector_io::pgvector
-            backend: kv_default
-      - provider_id: ${env.QDRANT_URL:+qdrant}
-        provider_type: remote::qdrant
-        config:
-          api_key: ${env.QDRANT_API_KEY:=}
-          persistence:
-            namespace: vector_io::qdrant_remote
-            backend: kv_default
-    files:
-      - provider_id: meta-reference-files
-        provider_type: inline::localfs
-        config:
-          storage_dir: ${env.FILES_STORAGE_DIR:=~/.llama/distributions/starter/files}
-          metadata_store:
-            table_name: files_metadata
-            backend: sql_default
-    safety:
-      - provider_id: llama-guard
-        provider_type: inline::llama-guard
-        config:
-          excluded_categories: []
-      - provider_id: code-scanner
-        provider_type: inline::code-scanner
-    agents:
-      - provider_id: meta-reference
-        provider_type: inline::meta-reference
-        config:
-          persistence:
-            agent_state:
-              namespace: agents
-              backend: kv_default
-            responses:
-              table_name: responses
-              backend: sql_default
-              max_write_queue_size: 10000
-              num_writers: 4
-    tool_runtime:
-      - provider_id: brave-search
-        provider_type: remote::brave-search
-        config:
-          api_key: ${env.BRAVE_SEARCH_API_KEY:=}
-          max_results: 3
-      - provider_id: tavily-search
-        provider_type: remote::tavily-search
-        config:
-          api_key: ${env.TAVILY_SEARCH_API_KEY:=}
-          max_results: 3
-      - provider_id: rag-runtime
-        provider_type: inline::rag-runtime
-      - provider_id: model-context-protocol
-        provider_type: remote::model-context-protocol
-    batches:
-      - provider_id: reference
-        provider_type: inline::reference
-        config:
-          kvstore:
-            namespace: batches
-            backend: kv_default
-  storage:
-    backends:
-      kv_default:
-        type: kv_sqlite
-        db_path: ${env.SQLITE_STORE_DIR:=~/.llama/distributions/starter}/kvstore.db
-      sql_default:
-        type: sql_sqlite
-        db_path: ${env.SQLITE_STORE_DIR:=~/.llama/distributions/starter}/sql_store.db
-    stores:
-      metadata:
-        namespace: registry
-        backend: kv_default
-      inference:
-        table_name: inference_store
-        backend: sql_default
-        max_write_queue_size: 10000
-        num_writers: 4
-      conversations:
-        table_name: openai_conversations
-        backend: sql_default
-      prompts:
-        namespace: prompts
-        backend: kv_default
-  registered_resources:
-    models:
-      - model_id: nomic-ai/nomic-embed-text-v1.5
-        provider_id: sentence-transformers
-        provider_model_id: nomic-ai/nomic-embed-text-v1.5
-        model_type: embedding
-        metadata:
-          embedding_dimension: 768
-    shields:
-      - shield_id: llama-guard
-        provider_id: ${env.SAFETY_MODEL:+llama-guard}
-        provider_shield_id: ${env.SAFETY_MODEL:=}
-      - shield_id: code-scanner
-        provider_id: ${env.CODE_SCANNER_MODEL:+code-scanner}
-        provider_shield_id: ${env.CODE_SCANNER_MODEL:=}
-    vector_dbs: []
-    datasets: []
-    scoring_fns: []
-    benchmarks: []
-    tool_groups:
-      - toolgroup_id: builtin::websearch
-        provider_id: tavily-search
-      - toolgroup_id: builtin::rag
-        provider_id: rag-runtime
-  server:
-    port: 8321
-  vector_stores:
-    default_provider_id: faiss
-    default_embedding_model:
-      provider_id: sentence-transformers
-      model_id: nomic-ai/nomic-embed-text-v1.5
+
+# Llama Stack Configuration
+# The configuration is split into modular sections that are combined in the ConfigMap
+# This allows updating specific sections (e.g., only registered_resources) between deployments
+
+# Provider configurations
+providers:
+  inference:
+    - provider_id: ${env.VLLM_URL:+vllm}
+      provider_type: remote::vllm
+      config:
+        url: ${env.VLLM_URL:=}
+        max_tokens: ${env.VLLM_MAX_TOKENS:=4096}
+        api_token: ${env.VLLM_API_TOKEN:=fake}
+        tls_verify: ${env.VLLM_TLS_VERIFY:=true}
+        allowed_models: []  # Prevent auto-registration to avoid conflicts
+    - provider_id: openai
+      provider_type: remote::openai
+      config:
+        api_key: ${env.OPENAI_API_KEY:=}
+        base_url: ${env.OPENAI_BASE_URL:=https://api.openai.com/v1}
+  vector_io:
+    - provider_id: faiss
+      provider_type: inline::faiss
+      config:
+        persistence:
+          namespace: vector_io::faiss
+          backend: kv_default
+    - provider_id: sqlite-vec
+      provider_type: inline::sqlite-vec
+      config:
+        db_path: ${env.SQLITE_STORE_DIR:=~/.llama/distributions/starter}/sqlite_vec.db
+        persistence:
+          namespace: vector_io::sqlite_vec
+          backend: kv_default
+    - provider_id: ${env.MILVUS_URL:+milvus}
+      provider_type: inline::milvus
+      config:
+        db_path: ${env.MILVUS_DB_PATH:=~/.llama/distributions/starter}/milvus.db
+        persistence:
+          namespace: vector_io::milvus
+          backend: kv_default
+    - provider_id: ${env.CHROMADB_URL:+chromadb}
+      provider_type: remote::chromadb
+      config:
+        url: ${env.CHROMADB_URL:=}
+        persistence:
+          namespace: vector_io::chroma_remote
+          backend: kv_default
+    - provider_id: ${env.PGVECTOR_DB:+pgvector}
+      provider_type: remote::pgvector
+      config:
+        host: ${env.PGVECTOR_HOST:=localhost}
+        port: ${env.PGVECTOR_PORT:=5432}
+        db: ${env.PGVECTOR_DB:=}
+        user: ${env.PGVECTOR_USER:=}
+        password: ${env.PGVECTOR_PASSWORD:=}
+        persistence:
+          namespace: vector_io::pgvector
+          backend: kv_default
+    - provider_id: ${env.QDRANT_URL:+qdrant}
+      provider_type: remote::qdrant
+      config:
+        api_key: ${env.QDRANT_API_KEY:=}
+        persistence:
+          namespace: vector_io::qdrant_remote
+          backend: kv_default
+  files:
+    - provider_id: meta-reference-files
+      provider_type: inline::localfs
+      config:
+        storage_dir: ${env.FILES_STORAGE_DIR:=~/.llama/distributions/starter/files}
+        metadata_store:
+          table_name: files_metadata
+          backend: sql_default
   safety:
-    default_shield_id: llama-guard
+    - provider_id: llama-guard
+      provider_type: inline::llama-guard
+      config:
+        excluded_categories: []
+    - provider_id: code-scanner
+      provider_type: inline::code-scanner
+  agents:
+    - provider_id: meta-reference
+      provider_type: inline::meta-reference
+      config:
+        persistence:
+          agent_state:
+            namespace: agents
+            backend: kv_default
+          responses:
+            table_name: responses
+            backend: sql_default
+            max_write_queue_size: 10000
+            num_writers: 4
+  tool_runtime:
+    - provider_id: brave-search
+      provider_type: remote::brave-search
+      config:
+        api_key: ${env.BRAVE_SEARCH_API_KEY:=}
+        max_results: 3
+    - provider_id: tavily-search
+      provider_type: remote::tavily-search
+      config:
+        api_key: ${env.TAVILY_SEARCH_API_KEY:=}
+        max_results: 3
+    - provider_id: rag-runtime
+      provider_type: inline::rag-runtime
+    - provider_id: model-context-protocol
+      provider_type: remote::model-context-protocol
+  batches:
+    - provider_id: reference
+      provider_type: inline::reference
+      config:
+        kvstore:
+          namespace: batches
+          backend: kv_default
+
+# Storage configuration
+storage:
+  backends:
+    kv_default:
+      type: kv_sqlite
+      db_path: ${env.SQLITE_STORE_DIR:=~/.llama/distributions/starter}/kvstore.db
+    sql_default:
+      type: sql_sqlite
+      db_path: ${env.SQLITE_STORE_DIR:=~/.llama/distributions/starter}/sql_store.db
+  stores:
+    metadata:
+      namespace: registry
+      backend: kv_default
+    inference:
+      table_name: inference_store
+      backend: sql_default
+      max_write_queue_size: 10000
+      num_writers: 4
+    conversations:
+      table_name: openai_conversations
+      backend: sql_default
+    prompts:
+      namespace: prompts
+      backend: kv_default
+
+# Registered resources (models, shields, vector DBs, etc.)
+registeredResources:
+  models:
+    - model_id: nomic-ai/nomic-embed-text-v1.5
+      provider_id: sentence-transformers
+      provider_model_id: nomic-ai/nomic-embed-text-v1.5
+      model_type: embedding
+      metadata:
+        embedding_dimension: 768
+  shields:
+    - shield_id: llama-guard
+      provider_id: ${env.SAFETY_MODEL:+llama-guard}
+      provider_shield_id: ${env.SAFETY_MODEL:=}
+    - shield_id: code-scanner
+      provider_id: ${env.CODE_SCANNER_MODEL:+code-scanner}
+      provider_shield_id: ${env.CODE_SCANNER_MODEL:=}
+  vector_dbs: []
+  datasets: []
+  scoring_fns: []
+  benchmarks: []
+  tool_groups:
+    - toolgroup_id: builtin::websearch
+      provider_id: tavily-search
+    - toolgroup_id: builtin::rag
+      provider_id: rag-runtime
+
+# Server configuration
+server:
+  port: 8321
+
+# Vector stores configuration
+vectorStores:
+  default_provider_id: faiss
+  default_embedding_model:
+    provider_id: sentence-transformers
+    model_id: nomic-ai/nomic-embed-text-v1.5
+
+# Safety configuration
+safety:
+  default_shield_id: llama-guard
